--- a/syntax/Emojis/index.html
+++ b/syntax/Emojis/index.html
@@ -1,14 +1,17 @@
-<p>Emojis (emoticons) is the set of icons to express emotions. please look <a href='http://www.emoji-cheat-sheet.com/'>cheatsheet</a> here.</p>
+<p>Emojis (emoticons) is the set of icons to express emotions. please look <a href="http://www.emoji-cheat-sheet.com/">cheatsheet</a> here.</p>
 
 <p><strong>Markdown</strong></p>
 
-<pre><code>Hello everybody :exclamation:</code></pre>
+<pre><code>Hello everybody :exclamation:
+</code></pre>
 
 <p><strong>Raw HTML</strong></p>
 
-<pre><code>Hello everybody &lt;img src=&quot;http://emojicdn.com/exclamation.png&quot; align=&quot;absmidle&quot; height=&quot;20&quot; width=&quot;20&quot; title=&quot;:exclamation:&quot; alt=&quot;:exclamation:&quot;&gt;</code></pre>
+<pre><code>Hello everybody &lt;img src="http://emojicdn.com/exclamation.png" align="absmidle" height="20" width="20" title=":exclamation:" alt=":exclamation:"&gt;
+</code></pre>
 
 <p><strong>Result</strong></p>
 
-<p>Hello everybody <img src='https://a248.e.akamai.net/assets.github.com/images/icons/emoji/exclamation.png' align='absmidle' width='20' height='20' /></p>
-<div class='alert alert-warning'>Right now there is not Emoji CDN to serve icons to ayyone, but we are now discussing this posibility. Untill that, this features is questionalbe.</div>
+<p>Hello everybody <img src="https://a248.e.akamai.net/assets.github.com/images/icons/emoji/exclamation.png" height="20" width="20" align="absmidle" /></p>
+
+<div class="alert alert-warning">Right now there is not Emoji CDN to serve icons to ayyone, but we are now discussing this posibility. Untill that, this features is questionalbe.</div>
