--- a/syntax/Overview/index.html
+++ b/syntax/Overview/index.html
@@ -1,11 +1,11 @@
-<p>Markdown2 syntax built upon <a href='http://daringfireball.net/projects/markdown/syntax'>markdown 1.0.1 syntax</a> originally by <a href='http://daringfireball.net/'>John Gruber</a>. This section does not describe Markdown 1 syntax but all that syntax works in Markdown 2.</p>
+<p>Markdown2 syntax built upon <a href="http://daringfireball.net/projects/markdown/syntax">markdown 1.0.1 syntax</a> originally by <a href="http://daringfireball.net/">John Gruber</a>. This section does not describe Markdown 1 syntax but all that syntax works in Markdown 2.</p>
 
 <p>Please use <code>.md2</code> extensions to save your Markdown 2 files. We ail recommend this extension to markdown parsers or editors developers.</p>
 
-<h3 id='markdown_2_target'>Markdown 2 target</h3>
+<h3 id="markdown-2-target">Markdown 2 target</h3>
 
 <ol>
-<li>We did not want to create HTML programming language. The readability of the text document is still highest priority. Our plan is to create syntax that is highly readable in <code>.md2</code> as plain text documents.</li>
-
-<li>We want to keep Markdown markup intuitively understood like <code>!!!</code> for lead text and <code>--Something--</code> for small or <code>++Something++</code> for big text.</li>
+  <li>We did not want to create HTML programming language. The readability of the text document is still highest priority. Our plan is to create syntax that is highly readable in <code>.md2</code> as plain text documents.</li>
+  <li>We want to keep Markdown markup intuitively understood like <code>!!!</code> for lead text and <code>--Something--</code>  for small or <code>++Something++</code> for big text. </li>
 </ol>
+
