--- a/tools/index.html
+++ b/tools/index.html
@@ -38,22 +38,22 @@
 <div class="container">
 <br>
 	
-	<div class='alert'>Here we will list all editors, websites and other tools that support Markdown 2.</div>
-<h3 id='editors'>Editors</h3>
+	
+<div class="alert">Here we will list all editors, websites and other tools that support Markdown 2.</div>
 
-<h3 id='websites'>Websites</h3>
+<h3 id="editors">Editors</h3>
 
-<h3 id='parsers'>Parsers</h3>
+<h3 id="websites">Websites</h3>
+
+<h3 id="parsers">Parsers</h3>
 
 <ul>
-<li>PHP</li>
-
-<li>JavaScript</li>
-
-<li>Nodejs</li>
-
-<li>C#</li>
+  <li>PHP</li>
+  <li>JavaScript</li>
+  <li>Nodejs</li>
+  <li>C#</li>
 </ul>
+
 </div>
 
 </div>
