--- a/syntax/Configuration/index.html
+++ b/syntax/Configuration/index.html
@@ -1,8 +1,8 @@
-<p>At the bottom of your document you can include configuration section. There you can set some page rendering parameters. This will not be visible by default.</p>
+<p>At the bottom of your document you can include configuration section. There you can set some page rendering parameters. This will not be visible by default. </p>
 
-<pre><code>&lt;!-- md-config
-	columns=2;
- 	prettify=1;
+ 	&lt;!– md-config
+ 		columns=2;
+<pre><code> 	prettify=1;
  	bootstrap=1;
  	tables_class=table table-stripped;
  	css=http://mycss.com/bootstrap.css;
@@ -12,25 +12,61 @@
  	gravatar=myemail@mail.ru;
  	profile=http://mysite.com;
  	date=20013-12-25 00:00:00;
- --&gt;</code></pre>
+ --&gt; You can type in one line if you want.
 
-<p>You can type in one line if you want.</p>
-
-<pre><code>&lt;!-- md-config columns=2; prettify=1; --&gt;</code></pre>
+&lt;!-- md-config columns=2; prettify=1; --&gt;
+</code></pre>
 
 <p>Here is the list of all possible configuration values.</p>
-<table><thead><tr><th>Value</th><th>Default</th><th>Description</th></tr></thead><tbody><tr><td style='text-align: left;'><code>columns</code></td><td style='text-align: left;'>2</td><td style='text-align: left;'>how many columns document should be. Apply CSS <code>column-count</code> property.</td>
-</tr><tr><td style='text-align: left;'><code>prettify</code></td><td style='text-align: left;'>0</td><td style='text-align: left;'>Will load Google prettifier script on the page al call it.</td>
-</tr><tr><td style='text-align: left;'><code>css</code></td><td style='text-align: left;'>none</td><td style='text-align: left;'>Will import CSS file on the page. You can include few separated by coma.</td>
-</tr><tr><td style='text-align: left;'><code>javascript</code></td><td style='text-align: left;'>none</td><td style='text-align: left;'>Will load external Javascript. You can include few separated by coma.</td>
-</tr><tr><td style='text-align: left;'><code>bootstrap</code></td><td style='text-align: left;'>0</td><td style='text-align: left;'>To load twitter bootstrap CSS vile or not.</td>
-</tr><tr><td style='text-align: left;'><code>date</code></td><td style='text-align: left;'>none</td><td style='text-align: left;'>Publish date. Will be placed at the bottom of document. Time is optional.</td>
-</tr></tbody></table>
+
+<table>
+  <thead>
+    <tr>
+      <th>Value</th>
+      <th>Default</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><code>columns</code></td>
+      <td>2</td>
+      <td>how many columns document should be. Apply CSS <code>column-count</code> property.</td>
+    </tr>
+    <tr>
+      <td><code>prettify</code></td>
+      <td>0</td>
+      <td>Will load Google prettifier script on the page al call it.</td>
+    </tr>
+    <tr>
+      <td><code>css</code></td>
+      <td>none</td>
+      <td>Will import CSS file on the page. You can include few separated by coma.</td>
+    </tr>
+    <tr>
+      <td><code>javascript</code></td>
+      <td>none</td>
+      <td>Will load external Javascript. You can include few separated by coma.</td>
+    </tr>
+    <tr>
+      <td><code>bootstrap</code></td>
+      <td>0</td>
+      <td>To load twitter bootstrap CSS vile or not.</td>
+    </tr>
+    <tr>
+      <td><code>date</code></td>
+      <td>none</td>
+      <td>Publish date. Will be placed at the bottom of document. Time is optional.</td>
+    </tr>
+  </tbody>
+</table>
+
 <p><code>css</code> and <code>javascript</code> result example.</p>
 
-<pre><code>&lt;style type=&quot;text/css&quot;&gt;
-  @import url(&quot;http://mycss.com/bootstrap.css&quot;);
+<pre><code>&lt;style type="text/css"&gt;
+  @import url("http://mycss.com/bootstrap.css");
 &lt;/style&gt;
-&lt;script src=&quot;http://mycss.com/bootstrap.js&quot;&gt;&lt;/script&gt;</code></pre>
+&lt;script src="http://mycss.com/bootstrap.js"&gt;&lt;/script&gt;
+</code></pre>
 
-<p>Along with core config parameters you can add any other parameters for your own application. For example <a href='http://jekyllrb.com/'>Jekyll</a> have metadata attached to every <code>.md</code> file. This metadata can go into this part of file.</p>
+<p>Along with core config parameters you can add any other parameters for your own application. For example <a href="http://jekyllrb.com/">Jekyll</a> have metadata attached to every <code>.md</code> file. This metadata can go into this part of file.  </p>
