--- a/syntax/Plaseholders/index.html
+++ b/syntax/Plaseholders/index.html
@@ -1,33 +1,29 @@
 <p>Placeholders are invisible marks that add additional fictionality. If <code>.md2</code> text document is parsed with Markdown 1 parser, this placeholders are invisible.</p>
 
 <ul>
-<li>
-<p><code>&lt;!--  md-readmore --&gt;</code> - place to separate file into 2 parts if one part have to be show in the list. This is useful for engines that use markdown to generate blogs or static sites.</p>
-</li>
-
-<li>
-<p><code>&lt;!--  md-toc --&gt;</code> - Will generate table of content in the place where placeholder is placed. It will use H1-H3 to create structure and name #anchors.</p>
-</li>
+  <li>
+    <p><code>&lt;!--  md-readmore --&gt;</code> - place to separate file into 2 parts if one part have to be show in the list. This is useful for engines that use markdown to generate blogs or static sites.</p>
+  </li>
+  <li>
+    <p><code>&lt;!--  md-toc --&gt;</code> - Will generate table of content in the place where placeholder is placed. It will use H1-H3 to create structure and name #anchors.</p>
+  </li>
 </ul>
 
-<h3 id='comment_systems'>Comment systems</h3>
+<h3 id="comment-systems">Comment systems</h3>
 
 <ul>
-<li>
-<p><code>&lt;!-- md-disqus shortname=myname --&gt;</code> - insert <a href='http://www.disqus.com'>Disqus</a> comment system.</p>
-</li>
-
-<li>
-<p><code>&lt;!-- md-idebate acct=myname --&gt;</code> - Insert <a href='http://intensedebate.com/'>IntenseDebate</a> comment system.</p>
-</li>
+  <li>
+    <p><code>&lt;!-- md-disqus shortname=myname --&gt;</code> - insert <a href="http://www.disqus.com">Disqus</a> comment system.</p>
+  </li>
+  <li>
+    <p><code>&lt;!-- md-idebate acct=myname --&gt;</code> - Insert <a href="http://intensedebate.com/">IntenseDebate</a> comment system.</p>
+  </li>
 </ul>
 
 <p>Also posible</p>
 
 <ul>
-<li>Cackle</li>
-
-<li>Facebook</li>
-
-<li>VK</li>
+  <li>Cackle</li>
+  <li>Facebook</li>
+  <li>VK</li>
 </ul>
